<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/functionPad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >


    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:maxLines="1"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="38sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12" >


        <Button
            android:id="@+id/buttonFunction"
            android:text="@string/buttonFunction"
            android:textSize="25sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".30" />

        <Button
        android:id="@+id/buttonClear"
        android:text="@string/buttonClear"
        android:textSize="35sp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".45" />

        <Button
            android:id="@+id/buttonDivide"
            android:text="@string/buttonDivide"
            android:textSize="35sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12" >


        <Button
            android:id="@+id/button7"
            android:text="@string/button7"
            android:textSize="35sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />
        <Button
            android:id="@+id/button8"
            android:text="@string/button8"
            android:textSize="35sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />
        <Button
            android:id="@+id/button9"
            android:text="@string/button9"
            android:textSize="35sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />

        <Button
            android:id="@+id/buttonMultiply"
            android:text="@string/buttonMultiply"
            android:textSize="22sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12" >


        <Button
            android:id="@+id/button6"
            android:text="@string/button6"
            android:textSize="35sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />
        <Button
            android:id="@+id/button5"
            android:text="@string/button5"
            android:textSize="35sp"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />
        <Button
            android:id="@+id/button4"
            android:text="@string/button4"
            android:textSize="35sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />

        <Button
            android:id="@+id/buttonSubtract"
            android:text="@string/buttonSubtract"
            android:textSize="35sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12" >


        <Button
            android:id="@+id/button3"
            android:text="@string/button3"
            android:textSize="35sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />
        <Button
            android:id="@+id/button2"
            android:text="@string/button2"
            android:textSize="35sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />
        <Button
            android:id="@+id/button1"
            android:text="@string/button1"
            android:textSize="35sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />

        <Button
            android:id="@+id/buttonAdd"
            android:text="@string/buttonAdd"
            android:textSize="35sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />

    </LinearLayout>


    <LinearLayout
            android:id="@+id/row6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12" >


        <Button
            android:id="@+id/buttonDecimalPoint"
            android:text="@string/buttonDecimalPoint"
            android:textSize="35sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".26" />
        <Button
            android:id="@+id/button0"
            android:text="@string/button0"
            android:textSize="35sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".26" />
        <Button
            android:id="@+id/buttonEquals"
            android:text="@string/buttonEquals"
            android:textSize="35sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".48" />




    </LinearLayout>



</LinearLayout>  <!-- main outside -->
