<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/functionPad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >


    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:maxLines="2"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/row6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12" >


        <Button
            android:id="@+id/buttonFunction"
            android:text="@string/buttonFunction"
            android:textSize="27sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33" />

        <Button
            android:id="@+id/buttonClear"
            android:text="@string/buttonClear"
            android:textSize="27sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".65" />




    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12" >


        <Button
            android:id="@+id/buttonTangent"
            android:text="@string/buttonTangent"
            android:textAllCaps="false"

            android:textSize="25sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33" />

        <Button
            android:id="@+id/buttonSine"
            android:text="@string/buttonSine"
            android:textAllCaps="false"

            android:textSize="27sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33" />

        <Button
            android:id="@+id/buttonCosine"
            android:textAllCaps="false"

            android:text="@string/buttonCosine"
            android:textSize="27sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12" >


        <Button
            android:id="@+id/buttonLog"
            android:textAllCaps="false"

            android:text="@string/buttonLog"
            android:textSize="25sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />
        <Button
            android:id="@+id/buttonLn"
            android:textAllCaps="false"

            android:text="@string/buttonLn"
            android:textSize="27sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />
        <Button
            android:id="@+id/buttonPi"
            android:textAllCaps="false"
            android:text="@string/buttonPi"
            android:textSize="27sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />

        <Button
            android:id="@+id/buttonE"
            android:textAllCaps="false"
            android:text="@string/buttonE"
            android:textSize="22sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12" >


        <Button
            android:id="@+id/buttonMod"
            android:text="@string/buttonMod"
            android:textSize="27sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />
        <Button
            android:id="@+id/buttonFa"
            android:text="@string/buttonFa"
            android:textSize="27sp"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />
        <Button
            android:id="@+id/buttonSquareRoot"
            android:text="@string/buttonSquareRoot"
            android:textSize="27sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />

        <Button
            android:id="@+id/buttonPower"
            android:text="@string/buttonPower"
            android:textSize="27sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12" >


        <Button
            android:id="@+id/buttonOpen"
            android:text="@string/buttonOpen"
            android:textSize="27sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />
        <Button
            android:id="@+id/buttonClose"
            android:text="@string/buttonClose"
            android:textSize="27sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />
        <Button
            android:text=""
            android:textSize="27sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />

        <Button
            android:text=""
            android:textSize="27sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25" />

    </LinearLayout>





</LinearLayout>  <!-- main outside -->
